adjust structure of html

--- a/index.html
+++ b/index.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="calculator-body">
-        <div class="display"></div>
-        <div class="digit-container">
-            <div class="digit-row">
-                <button class="digit">9</button>
-                <button class="digit">8</button>
-                <button class="digit">7</button>
-            </div>
-            <div class="digit-row">
-                <button class="digit">6</button>
-                <button class="digit">5</button>
-                <button class="digit">4</button>
-            </div>
-            <div class="digit-row">
-                <button class="digit">3</button>
-                <button class="digit">2</button>
-                <button class="digit">1</button>
-            </div>
-            <div class="digit-row">
-                <button class="digit">0</button>
+        <div class="display-container">
+            <div class="screen">
+                display
             </div>
         </div>
-        <div class="operation-container">
-            <button class="operation">+</button>
-            <button class="operation">-</button>
-            <button class="operation">x</button>
-            <button class="operation">/</button>
-            <button class="operation">=</button>
+        <div class="button-area">
+            <div class="digit-container">
+                <div class="digit-row">
+                    <button class="digit">9</button>
+                    <button class="digit">8</button>
+                    <button class="digit">7</button>
+                </div>
+                <div class="digit-row">
+                    <button class="digit">6</button>
+                    <button class="digit">5</button>
+                    <button class="digit">4</button>
+                </div>
+                <div class="digit-row">
+                    <button class="digit">3</button>
+                    <button class="digit">2</button>
+                    <button class="digit">1</button>
+                </div>
+                <div class="digit-row">
+                    <button class="digit">0</button>
+                </div>
+            </div>
+            <div class="operation-container">
+                <button class="operation">+</button>
+                <button class="operation">-</button>
+                <button class="operation">x</button>
+                <button class="operation">/</button>
+                <button class="operation">=</button>
+            </div>
+            <button class="clear">Clear</button>
         </div>
-        <button class="operation">Clear</button>
     </div>
 </body>
 </html>
