--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
             <div class="screen">Screen</div>
         </div>
         <div class="button-row">
-            <button>+</button>
-            <button>-</button>
-            <button>x</button>
-            <button>/</button>
+            <button class="operator">+</button>
+            <button class="operator">-</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
         </div>
         <div class="button-row">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>Clear</button>
+            <button class="digit">7</button>
+            <button class="digit">8</button>
+            <button class="digit">9</button>
+            <button class="clear">Clear</button>
         </div>
         <div class="bottom-container">
             <div class="bottom-buttons">
                 <div class="button-row">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
+                    <button class="digit">4</button>
+                    <button class="digit">5</button>
+                    <button class="digit">6</button>
                 </div>
                 <div class="button-row">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
+                    <button class="digit">1</button>
+                    <button class="digit">2</button>
+                    <button class="digit">3</button>
                 </div>
                 <div class="button-row">
-                    <button class="zero">0</button>
+                    <button class="digit">0</button>
                 </div>
             </div>
             <div class="equal">
