set default display to 0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="calculator-body">
         <div class="display-container">
-            <div class="screen"></div>
+            <div class="screen">0</div>
         </div>
         <div class="button-row">
             <button class="operator">+</button>
