Add decimal and delete buttons

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                 </div>
                 <div class="button-row">
                     <button class="digit">0</button>
+                    <button class="decimal">.</button>
                 </div>
             </div>
-            <div class="equal">
-                <button>=</button>
+            <div class="misc">
+                <button class="equal">=</button>
+                <button class="delete">Delete</button>
             </div>
         </div>
     </div>
