restructure html so that it is easier to manipulate with CSS

--- a/index.html
+++ b/index.html
@@ -12,38 +12,35 @@
         <div class="display-container">
             <div class="screen">0</div>
         </div>
-        <div class="button-row">
-            <button class="operator">+</button>
-            <button class="operator">-</button>
-            <button class="operator">*</button>
-            <button class="operator">/</button>
-        </div>
-        <div class="button-row">
-            <button class="digit">7</button>
-            <button class="digit">8</button>
-            <button class="digit">9</button>
-            <button class="clear">Clear</button>
-        </div>
-        <div class="bottom-container">
-            <div class="bottom-buttons">
-                <div class="button-row">
-                    <button class="digit">4</button>
-                    <button class="digit">5</button>
-                    <button class="digit">6</button>
-                </div>
-                <div class="button-row">
-                    <button class="digit">1</button>
-                    <button class="digit">2</button>
-                    <button class="digit">3</button>
-                </div>
-                <div class="button-row">
-                    <button class="digit">0</button>
-                    <button class="decimal">.</button>
-                </div>
+        <div class="button-container">
+            <div class="button-row">
+                <button class="clear">AC</button>
+                <button class="operator">/</button>
+                <button class="negative">+/-</button>
+                <button class="delete">CE</button>
             </div>
-            <div class="misc">
+            <div class="button-row">
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
+                <button class="operator">*</button>
+            </div>
+            <div class="button-row">
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="operator">-</button>
+            </div>
+            <div class="button-row">
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
+                <button class="operator">+</button>
+            </div>
+            <div class="button-row">
+                <button class="digit">0</button>
+                <button class="decimal">.</button>
                 <button class="equal">=</button>
-                <button class="delete">Delete</button>
             </div>
         </div>
     </div>
