switch / and CE button positions

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="button-container">
             <div class="button-row">
                 <button class="clear">AC</button>
-                <button class="operator">/</button>
                 <button class="negative">+/-</button>
                 <button class="delete">CE</button>
+                <button class="operator">/</button>
             </div>
             <div class="button-row">
                 <button class="digit">7</button>
@@ -38,7 +38,7 @@
                 <button class="operator">+</button>
             </div>
             <div class="button-row">
-                <button class="digit">0</button>
+                <button id="zero" class="digit">0</button>
                 <button class="decimal">.</button>
                 <button class="equal">=</button>
             </div>
