--- a/index.html
+++ b/index.html
@@ -8,41 +8,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator-body">
-        <div class="display-container">
-            <div class="screen">0</div>
+    <h1>Cesar's Calculator</h1>
+    <div class="non-title">
+        <div class="keyboard-instructions">
+            <p>If you are using the keyboard:</p>
+            <ul>
+                <li>use "_" and not "-" for negative numbers</li>
+                <li>use "delete" for the CE button</li>
+                <li>use "z" for the AC button</li>
+            </ul>
+            <p>All other keys correspond to the appropriate buttons.</p>
         </div>
-        <div class="button-container">
-            <div class="button-row">
-                <button class="clear">AC</button>
-                <button class="negative">+/-</button>
-                <button class="delete">CE</button>
-                <button class="operator">/</button>
+        <div class="calculator-body">
+            <div class="display-container">
+                <div class="screen">0</div>
             </div>
-            <div class="button-row">
-                <button class="digit">7</button>
-                <button class="digit">8</button>
-                <button class="digit">9</button>
-                <button class="operator">*</button>
-            </div>
-            <div class="button-row">
-                <button class="digit">4</button>
-                <button class="digit">5</button>
-                <button class="digit">6</button>
-                <button class="operator">-</button>
-            </div>
-            <div class="button-row">
-                <button class="digit">1</button>
-                <button class="digit">2</button>
-                <button class="digit">3</button>
-                <button class="operator">+</button>
-            </div>
-            <div class="button-row">
-                <button id="zero" class="digit">0</button>
-                <button class="decimal">.</button>
-                <button class="equal">=</button>
+            <div class="button-container">
+                <div class="button-row">
+                    <button class="clear">AC</button>
+                    <button class="negative">+/-</button>
+                    <button class="delete">CE</button>
+                    <button class="operator">/</button>
+                </div>
+                <div class="button-row">
+                    <button class="digit">7</button>
+                    <button class="digit">8</button>
+                    <button class="digit">9</button>
+                    <button class="operator">*</button>
+                </div>
+                <div class="button-row">
+                    <button class="digit">4</button>
+                    <button class="digit">5</button>
+                    <button class="digit">6</button>
+                    <button class="operator">-</button>
+                </div>
+                <div class="button-row">
+                    <button class="digit">1</button>
+                    <button class="digit">2</button>
+                    <button class="digit">3</button>
+                    <button class="operator">+</button>
+                </div>
+                <div class="button-row">
+                    <button id="zero" class="digit">0</button>
+                    <button class="decimal">.</button>
+                    <button class="equal">=</button>
+                </div>
             </div>
         </div>
+    
     </div>
     <script src="script.js"></script>
 </body>
